2010-11-29  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: crash upon inspecting user style sheet.
        https://bugs.webkit.org/show_bug.cgi?id=50109

        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyleSheet::resourceStyleSheetText):

Canonical link: https://commits.webkit.org/63270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72811 268f45cc-cd09-0410-ab3c-d52691b4dbfc